--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,15 +3,18 @@
 name="Linux"
 platform="Linux"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PackedStringArray("res://mods/api/api.tscn")
 include_filter=""
 exclude_filter=""
-export_path=".export/Linux/MatchTreeModLoader.x86_64"
+export_path=""
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -20,7 +23,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
