--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="scenes"
 export_files=PackedStringArray("res://mods/api/api.tscn")
 include_filter=""
-exclude_filter=""
+exclude_filter="definitions/*,mod_loader/*"
 export_path=""
 patches=PackedStringArray()
 encryption_include_filters=""
