--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="scenes"
-export_files=PackedStringArray("res://mods/api/api.tscn")
+export_files=PackedStringArray("res://mods/modding_api/modding_api.tscn")
 include_filter=""
 exclude_filter="definitions/*,mod_loader/*"
 export_path=""
